--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,5 @@
 {
+    "rewrites": [ {"source": "/(.*)", "destination": "/"} ] ,
     "builds":[{
         "src":"backends/backends/wsgi.py",
         "use":"@vercel/python",
