--- a/vercel.json
+++ b/vercel.json
@@ -11,14 +11,14 @@
             "use": "@vercel/python",
             "config": {
                 "maxLambdaSize": "15mb",
-                "runtime": "python3.11"
+                "runtime": "python3.9"
             }
         }
     ],
     "routes": [
         {
             "src": "/(.*)",
-            "dest": "backends/backends/wsgi.py"
+            "dest": "backends/wsgi.py"
         }
     ]
 }
